2008-02-01  Neil Jerram  <neil@ossau.uklinux.net>

	* standalone/Makefile.am: Add stanza for test-with-guile-module.

	* standalone/test-with-guile-module.c: New test.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* COPYING: Removed.

2008-01-18  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/hash.test: New "hashx" test supplied by Gregory Marton;
	prior to today's fix in libguile/hashtab.c, this caused a
	segmentation fault.

2007-12-29  Neil Jerram  <neil@ossau.uklinux.net>

	* standalone/test-bad-identifiers: New test.
	(top level): Explain the point of this test.

	* standalone/Makefile.am (check_SCRIPTS, TESTS): Add it.

2007-12-13  Stephen Compall  <s11@member.fsf.org>

	* tests/srfi-69.test (SRFI-69)[can use all arguments, including
	size]: New test.

2007-12-03  Stephen Compall  <s11@member.fsf.org>

	* tests/srfi-69.test: New file.
	* Makefile.am: Add it.

2007-10-19  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/eval.test (promises)[unmemoizing a promise]: New test.

	* tests/continuations.test ("continuations"): Use
	with-debugging-evaluator.

	* standalone/test-use-srfi: Use -q to avoid picking up the user's
	~/.guile file

	* lib.scm (with-debugging-evaluator*, with-debugging-evaluator):
	New utilities.

2007-10-17  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (reading)[CR recognized as a token
	delimiter]: New test.

2007-10-10  Ludovic Courtès  <ludo@gnu.org>

	* standalone/test-conversion.c: Include <inttypes.h> where
	available.  Use `PRIiMAX' and `PRIuMAX' to print
	`scm_t_u?intmax'.  Fixes warnings on x86_64.  Reported by Poor
	Yorick <org.gnu.lists.guile-user@pooryorick.com>.

	* standalone/Makefile.am (test_cflags): Removed reference to
	`libguile-ltdl'.

2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (reading)[block comment finishing sexp]: New
	test.

2007-08-23  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (read-options)[positions on quote]: New
	test, proposed by Kevin Ryde.
