@@ -1,3 +1,8 @@
+2008-02-15  Ludovic Courtès  <ludo@gnu.org>
+
+	* tests/gc.test (gc): Add hack to clean up the stack so that the
+	test passes on SPARC.
+
 2008-02-01  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* standalone/Makefile.am: Add stanza for test-with-guile-module.
